# SmartTest-Selector

./: README.md  pyproject.toml  requirements.txt
data/: sample_testcases.json
src/smarttest_selector/: __init__.py  cli.py  loader.py  models.py  selector.py
tests/: test_loader.py  test_selector.py
